﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-10-31 Sebastian Mendel <cybot_tm@users.sourceforge.net>
	* themes/*/css/theme_right.css.php:
	   - use right image path
	   - fixed icon alignment for rtl languages
	* main.php, phpmyadmin.css.php, libraries/mysql_charsets.lib.php:
	   - fixed some rtl language issues
	* favicon.ico: changed icon
	
2005-10-31 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php: do not display No under the Password column
      if this is not a "real user" definition

2005-10-31 Michal Čihař  <michal@cihar.com>
    * libraries/select_lang.lib.php: Simplify code.
    * libraries/common.lib.php: Allow collation change for ENUM and SET
      columns (bug #1343627).
    * main.php: Use normal message on reload, not just plain text.
    * themes/darkblue_orange/css/theme_right.css.php,
      themes/original/css/theme_right.css.php: Fix URL for cursor (bug
      #1342683).

2005-10-30 Michal Čihař  <michal@cihar.com>
    * lang/slovak: Update, thanks to Ivan Kuriscak - shylauda69.
    * lang/*: Remove duplicite message.
    * lang/sync_lang.sh: Sync japanese also, it works now (at least for me).
    * lang/japanese: Update, thanks to Tadashi Jokagi - elf2000.
    * libraries/display_tbl.lib.php: Do not break on special chars in column
      name (bug #1180668).
    * libraries/common.lib.php: Do not escape SQL query twice while showing it
      in error message (bug #1336452).
    * left.php, querywindow.php, tbl_query_box.php: Fix including of files
      when search path does not contain current directory.
    * libraries/common.lib.php, libraries/left_header.inc.php: Use common code
      for generating links to documentation, fixes link to new style docs.

2005-10-29 Michal Čihař  <michal@cihar.com>
    * Documentation.html, config.default.php, libraries/common.lib.php: Link
      documentation to version we run (RFE #1334292), fix links for chapter