@@ -5,6 +5,10 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2005-11-01 Sebastian Mendel <cybot_tm@users.sourceforge.net>
+    * libraries/common.lib.php:
+      bug #1342332 Error messages wrongly formatted.
+
 2005-10-31 Sebastian Mendel <cybot_tm@users.sourceforge.net>
 	* themes/*/css/theme_right.css.php:
 	   - use right image path
